made some containers 100vh for readability on different screen types and centered some containers. Fixed a centering issue with headerPaigeIcon

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 
 
 
-.icon-bar {
+.nav-bar {
   width: 8vw;
   height: 100%;
   /* background-color: #555; */
@@ -42,7 +42,7 @@ body {
   margin-right: 10px;
 }
 
-.vertical-center {
+.nav-center {
   margin: 0;
   position: fixed;
   top: 50%;
@@ -51,7 +51,7 @@ body {
 }
 
 
-.icon-bar a {
+.nav-bar a {
   display: block;
   text-align: center;
   padding: 16px;
@@ -61,7 +61,7 @@ body {
   text-decoration: none;
 }
 
-.icon-bar a:hover {
+.nav-bar a:hover {
   background-color:rgba(44, 27, 75, 0.7);
   border-radius: 10px;
 }
@@ -104,13 +104,25 @@ body {
   text-align: center;
   justify-content: center;
   width: 100%;
-  height: auto;
-  padding-top: 20vh;
+  height: 100vh;
+  /* padding-top: 20vh; */
+  /* position: absolute; */
+  
   /* top: 40%; */
   /* position: absolute; */
   /* display: inline-block; */
 }
 
+.centerContent{
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
 
 
 .headerPaigeIcon{
@@ -119,8 +131,8 @@ body {
   width: 15vw;
   max-width: 205px;
   height: auto;
-  top: 10%;
-  left: 40vw;
+  /* top: 10%; */
+  /* left: 40vw; */
   
   /* margin-top: -50px;
   margin-left: -100px; */
@@ -154,6 +166,15 @@ p{
   padding: 3px;
   width: 3%;
   height: auto;
+  
+}
+
+.inline{
+  display:inline;
+}
+
+.sectionHeader{
+  margin-bottom: 5vh;
 }
 
 .lineDivider{
@@ -162,20 +183,18 @@ p{
   margin-top: 4%;
   margin-bottom: 10%;
 }
-/* 
-.s{
-justify-content: center;
-width: 100%;
-  height: 60vh;
-} */
+
 .skillsContainer{
-  display: inline-flex;
-  flex-wrap: wrap;
+  width: 100%;
+  
+  /* display: inline-flex;
+  flex-wrap: wrap; */
   justify-content: center;
   /* width: 100vw; */
-  height: 30vh;
+  /* height: 30vh; */
   text-align: center;
-  padding-left: 11vw;
+  /* padding-left: 11vw;
+  padding-right: 11vw; */
   padding-bottom: 0;
   overflow-x: hidden;
 }
@@ -186,6 +205,7 @@ width: 100%;
   width: 15vw;
   height: 4vh;
   margin: 15px;
+  margin-bottom: 3vw;
   /* padding-top: 75px; */
   background: none;
   text-align: center;
@@ -204,19 +224,10 @@ width: 100%;
 
 
 
-/* @media screen and (max-width:1024px){
-  .headerPaigeIcon{
-    width: 19%;
-    height: auto;
-    top: 20%;
-    left: 40%;
-  }
-} */
+
 
 @media screen and (min-width:1800px){
-  /* .headerPaigeIcon{
-    left: 43vw;
-  } */
+  
   h1{
 font-size: 55px;
   }
@@ -227,7 +238,7 @@ font-size: 55px;
 }
 
 @media screen and (max-width:930px){
-  .icon-bar {
+  .nav-bar {
     margin: 0;
     width: 100%;
     height: 8vh;
@@ -235,11 +246,11 @@ font-size: 55px;
     padding-bottom: 3%;
   }
 
-  .icon-bar a{
+  .nav-bar a{
     float: left;
     padding-top: 8%;
   }
-  .vertical-center{
+  .nav-center{
     display: inline-block;
     top: 3%;
     -ms-transform: none; 
@@ -257,7 +268,7 @@ font-size: 55px;
     display: none;
   }
   /* .skillsContainer{
-    height: 30vh;
+    height: 5vh;
   } */
 }
 
@@ -285,7 +296,7 @@ font-size: 55px;
     font-size: 8px;
     padding-top: 5%;
   }
-  .icon-bar a {
+  .nav-bar a {
     padding: 4px;  
 }
 
